@@ -4,21 +4,23 @@ import com.spring.auth.anotations.components.CustomEventListener;
 import com.spring.auth.events.domain.RoleDeletedEvent;
 import com.spring.auth.exceptions.application.DuplicatedKeyException;
 import com.spring.auth.role.domain.Role;
-import com.spring.auth.user.application.ports.in.RemoveRolesFromUsersPort;
+import com.spring.auth.user.application.ports.in.RemoveRolesFromUserPort;
+import com.spring.auth.user.application.ports.out.FindUserPort;
+import com.spring.auth.user.domain.User;
 import lombok.AllArgsConstructor;
 import org.springframework.scheduling.annotation.Async;
 import org.springframework.transaction.event.TransactionalEventListener;
 
-import java.util.Collections;
+import java.util.List;
 
 /** @author diegotobalina created on 19/06/2020 */
 @CustomEventListener
 @AllArgsConstructor
 public class RoleDeletedEventListener {
 
-  private RemoveRolesFromUsersPort removeRolesFromUsersPort;
+  private RemoveRolesFromUserPort removeRolesFromUserPort;
+  private FindUserPort findUserPort;
 
-  /** When a role is deleted should be removed from the users */
   @Async
   @TransactionalEventListener
   public void roleDeleted(RoleDeletedEvent roleDeletedEvent) throws DuplicatedKeyException {
@@ -26,7 +28,9 @@ public class RoleDeletedEventListener {
     removeRolesFromUsers(deletedRole);
   }
 
-  private void removeRolesFromUsers(Role source) throws DuplicatedKeyException {
-    removeRolesFromUsersPort.remove(Collections.singletonList(source.getId()));
+  /** When a role is deleted should be removed from the users */
+  private void removeRolesFromUsers(Role deletedRole) throws DuplicatedKeyException {
+    List<User> users = findUserPort.findAllByRoleId(deletedRole.getId());
+    removeRolesFromUserPort.remove(users, List.of(deletedRole.getId()));
   }
 }
