@@ -10,7 +10,7 @@ import com.spring.auth.role.infrastructure.repositories.jpa.RoleRepositoryJpa;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Repository;
 
-import java.util.Collections;
+import java.util.List;
 
 /** @author diegotobalina created on 24/06/2020 */
 @Repository
@@ -22,7 +22,7 @@ public class CreateRoleRepository implements CreateRolePort {
 
   @Override
   public Role create(Role role) throws DuplicatedKeyException {
-    checkRolesConstraintsPort.check(Collections.singletonList(role));
+    checkRolesConstraintsPort.check(List.of(role));
     final RoleJpa roleJpa = RoleMapper.parse(role);
     final RoleJpa savedRoleJpa = roleRepositoryJpa.save(roleJpa);
     return RoleMapper.parse(savedRoleJpa);
