@@ -1,13 +1,15 @@
 package com.spring.auth.user.infrastructure.repositories;
 
 import com.spring.auth.exceptions.application.DuplicatedKeyException;
+import com.spring.auth.user.application.ports.out.CheckUsersConstraintsPort;
 import com.spring.auth.user.application.ports.out.UpdateUserPort;
-import com.spring.auth.user.application.ports.out.UpdateUsersPort;
 import com.spring.auth.user.domain.User;
+import com.spring.auth.user.domain.UserJpa;
+import com.spring.auth.user.domain.UserMapper;
+import com.spring.auth.user.infrastructure.repositories.jpa.UserRepositoryJpa;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Repository;
 
-import java.util.Collections;
 import java.util.List;
 
 /** @author diegotobalina created on 24/06/2020 */
@@ -15,19 +17,24 @@ import java.util.List;
 @AllArgsConstructor
 public class UpdateUserRepository implements UpdateUserPort {
 
-  private UpdateUsersPort updateUsersPort;
+  private UserRepositoryJpa userRepositoryJpa;
+  private CheckUsersConstraintsPort checkUsersConstraintsPort;
 
-  /**
-   * Save the existing user in the database with the new data. Before save the user check for
-   * duplicated username o duplicated email.
-   *
-   * @param user User that must be updated
-   * @return List with the updated users
-   * @throws DuplicatedKeyException When some constraint fails, for example duplicated username
-   */
   @Override
   public User update(User user) throws DuplicatedKeyException {
-    List<User> updatedUsers = updateUsersPort.updateAll(Collections.singletonList(user));
+    List<User> updatedUsers = updateAll(List.of(user));
     return updatedUsers.stream().findFirst().get();
+  }
+
+  @Override
+  public List<User> updateAll(List<User> users) throws DuplicatedKeyException {
+    checkUsersConstraintsPort.check(users);
+    return saveUsers(users);
+  }
+
+  private List<User> saveUsers(List<User> users) {
+    List<UserJpa> usersJpa = UserMapper.parseUserList(users);
+    List<UserJpa> savedUsersJpa = userRepositoryJpa.saveAll(usersJpa);
+    return UserMapper.parseUserJpaList(savedUsersJpa);
   }
 }
